--- a/radio_ae/radio_ae.tex
+++ b/radio_ae/radio_ae.tex
@@ -848,7 +848,7 @@ This timing algorithm was verified by simulation using data symbols for the MPP 
 
 \subsection{SNR Estimation}
 
-The April 2024 stored file OTA test campaign showed the need for a method of measuring the SNR of off air RADAE signals. Consider the normalised cross correlation function from \cite{freedv_low}:
+The April 2024 stored file OTA test campaign showed the need for a method of measuring the SNR from off air RADAE signals. Consider the normalised cross correlation function from \cite{freedv_low}:
 \begin{equation}
 \label{eq:norm_cross}
 C_t^2 = \frac{|\bm{r}^H\bm{p}|^2}{\bm{r}^H\bm{r}}
@@ -866,7 +866,7 @@ C_t^2 &= \frac{|(g\bm{p}+\bm{n})^H\bm{p}|^2}{|g|^2\bm{p}^H\bm{p} + 2(g\bm{p})^H\
       &= \frac{|g^H\bm{p}^H\bm{p} + \bm{n}^H \bm{p}|^2}{|g|^2\bm{p}^H\bm{p} + 2(g\bm{p})^H\bm{n} + \bm{n}^H\bm{n}}
 \end{split}
 \end{equation}
-If we assume the dot product of the noise and pilot e.g. $\bm{n}^H \bm{p}$ is small compared to the other terms:
+As $\bm{n}$ and $\bm{p}$ are uncorrelated we assume the dot product terms of $\bm{n}$ and $\bm{p}$ are small compared to the other terms:
 \begin{equation}
 \label{eq:norm_cross_approx}
 \begin{split}
@@ -874,7 +874,7 @@ C_t^2 &\approx \frac{|g^H\bm{p}^H\bm{p}|^2}{|g|^2\bm{p}^H\bm{p} + \bm{n}^H\bm{n}
       &= \frac{|g|^2 (\bm{p}^H\bm{p})^2}{|g|^2\bm{p}^H\bm{p} + \bm{n}^H\bm{n}}
 \end{split}
 \end{equation}
-Let us define the signal power $S$ as the energy per $M$ samples and noise power $N$ as the noise energy per $M$ samples. From (\ref{eq:rx_vec}):
+Power is energy per unit time. Let us define the signal power $S$ as the energy per $M$ samples and noise power $N$ as the noise energy per $M$ samples. From (\ref{eq:rx_vec}):
 \begin{equation}
 \begin{split}
 S &= |g\bm{p}|^2 \\
@@ -889,13 +889,22 @@ C_t^2 &= \frac{S \bm{p}^H\bm{p}}{S + N} \\
 S/N &= \frac{C_t^2}{ \bm{p}^H\bm{p} - C_t^2}
 \end{split}
 \end{equation}
+This algorithm was simulated in \emph{est\_snr.py} with reasonable results over the range -10 to +20 dB SNR (Figure \ref{fig:est_snr}). While there is significant variance in the estimates at low SNRs, the mean appears correct therefore averaging SNR estimates over multiple modem frames should lead to reasonable SNR estimates.
+
+\begin{figure}[H]
+\caption{Scatter plot of actual versus estimated SNR values for a 15 carrier waveform, $M=160$ sample pilot sequence.}
+\label{fig:est_snr}
+\begin{center}
+\input est_snr.tex
+\end{center}
+\end{figure}
 
 Further work:
 \begin{itemize}
-\item what ios noise bandwidth, $Fs$?  What happens when we BPF?
+\item What is the noise bandwidth, $F_s$?  What happens when we BPF?
 \item This is likely to work OK for AWGN but not sure about multipath.
 \item Should we use the received sequence at $t_1$/$t_2$ or $t_{sam}$?
-\item It may be better to choose a time shifted version of $\bm{p}$ as the prototype top avoid the sequence including ISI which would bias the SNR results.
+\item It may be better to choose a time shifted version of $\bm{p}$ as the prototype to avoid the sequence including ISI which would bias the SNR results.
 \end{itemize}
 \section{Glossary}
 
