experiment and write up on Nc v acquisition performance, high Nc is better

--- a/radio_ae/radae_refs.bib
+++ b/radio_ae/radae_refs.bib
@@ -14,3 +14,11 @@
       archivePrefix={arXiv},
       primaryClass={eess.AS}
 }
+@misc{valin2024low,
+      title={Very Low Complexity Speech Synthesis Using Framewise Autoregressive GAN (FARGAN) with Pitch Prediction},
+      author={Jean-Marc Valin and Ahmed Mustafa and Jan Büthe},
+      year={2024},
+      eprint={2405.21069},
+      archivePrefix={arXiv},
+      primaryClass={eess.AS}
+}
